Document where Solr's GC log actually goes
The GC-pause guidance pointed at "Solr's GC logs" without saying where they
are, which was misleading: the GC log is a JVM-level -Xlog sink that bypasses
log4j2, and Solr's default writes it to /var/solr/logs/solr_gc.log -- a path
that is not on the Solr PVC in our Helm chart (only /var/solr/data is
mounted), so it is ephemeral and lost on the very restart that prompts you to
read it. It also never reached stdout, so it was absent from Grafana.

The chart now sets GC_LOG_OPTS="-Xlog:gc:stdout:time,uptime" so GC lines are
collected alongside solr.log. Documents that, the bare-gc vs gc* verbosity
tradeoff, the file-based fallback, and jvm.gc_count/gc_time_ms as the
aggregate signal when logs aren't handy.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>